--- a/css/sections/_masthead.scss
+++ b/css/sections/_masthead.scss
@@ -218,3 +218,11 @@ header.masthead {
         }
     }
 }
+
+h1 h2 h3 h4{
+    font-family: $headings-font-family
+}
+
+p{
+    font-family: $font-family-base;
+}
