--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?2082549');
-  src: url('../font/fontello.eot?2082549#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?2082549') format('woff2'),
-       url('../font/fontello.woff?2082549') format('woff'),
-       url('../font/fontello.ttf?2082549') format('truetype'),
-       url('../font/fontello.svg?2082549#fontello') format('svg');
+  src: url('../font/fontello.eot?32601284');
+  src: url('../font/fontello.eot?32601284#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?32601284') format('woff2'),
+       url('../font/fontello.woff?32601284') format('woff'),
+       url('../font/fontello.ttf?32601284') format('truetype'),
+       url('../font/fontello.svg?32601284#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?2082549#fontello') format('svg');
+    src: url('../font/fontello.svg?32601284#fontello') format('svg');
   }
 }
 */
@@ -60,9 +60,11 @@
 .icon-thumbs-down:before { content: '\e803'; } /* '' */
 .icon-download:before { content: '\e804'; } /* '' */
 .icon-upload:before { content: '\e805'; } /* '' */
+.icon-basket:before { content: '\e806'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-gamepad:before { content: '\f11b'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-thumbs-down-alt:before { content: '\f165'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-cart-plus:before { content: '\f217'; } /* '' */
 .icon-whatsapp:before { content: '\f232'; } /* '' */
