--- a/css/_global.scss
+++ b/css/_global.scss
@@ -169,6 +169,19 @@ select{
     }
 }
 
+@media (max-width:768px){
+.modal-active{
+    opacity: 1;
+    visibility: visible;
+    z-index: 5;
+    margin-top: 10vh;
+    max-height: 90vh;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-x: scroll;
+}
+}
+
 .modal-active .modal-carrito {
     margin-top: 0;
 }
