--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,5 +6,7 @@
 
 @import "./components/_buttons.scss";
 @import "./components/_navbar.scss";
+@import "./components/notifications";
 
 @import "./sections/_masthead.scss";
+@import "./sections/_loader.scss";
