--- a/css/components/_buttons.scss
+++ b/css/components/_buttons.scss
@@ -14,3 +14,40 @@
 .btn-gradient:hover{
     transform: scale(1.02,1.02);
 }
+
+.delete-btn {
+    background-color: white;
+    color: rgb(49, 110, 190);
+    border: none;
+    font-size: 15px;
+}
+
+.delete-btn:hover {
+    cursor: pointer;
+}
+.delete-btn:focus {
+    outline: none;
+}
+
+.cart-btns{
+    color:rgb(255, 255, 255) ;
+    background-color:rgb(49, 110, 190);
+    margin-top:5%;
+    margin-bottom:5%;
+}
+
+#cart-button {
+    border: none;
+    color: rgb(49, 110, 190);;
+    font-size: 40px;
+    border-radius: 50%;
+    padding: 10px 20px;
+    transition: all .3s;
+}
+#cart-button:hover {
+    cursor: pointer;
+    color: white;
+}
+#cart-button:focus {
+    outline: none;
+}
