--- a/css/styles.css
+++ b/css/styles.css
@@ -12001,7 +12001,7 @@ html {
 
 .footer__title {
   text-decoration: none;
-  font-family: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   color: white;
 }
 
@@ -12011,7 +12011,7 @@ html {
 
 .footer__text {
   text-decoration: none;
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
   color: gray;
   text-transform: uppercase;
   display: block;
@@ -12047,189 +12047,6 @@ html {
   }
 }
 
-#boton-carrito {
-  border: none;
-  color: #316ebe;
-  font-size: 40px;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-
-#boton-carrito:hover {
-  cursor: pointer;
-  color: white;
-}
-
-#boton-carrito:focus {
-  outline: none;
-}
-
-#contenedor-productos {
-  max-width: 1200px;
-  margin: 60px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-p {
-  line-height: 1.8;
-}
-
-.producto {
-  max-width: 30%;
-  padding: 10px;
-  margin-bottom: 20px;
-  -webkit-box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
-          box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
-}
-
-select {
-  display: inline;
-  text-align: center;
-  border: 1px solid lightskyblue;
-}
-
-.modal-contenedor {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  opacity: 0;
-  visibility: hidden;
-}
-
-.modal-active {
-  opacity: 1;
-  visibility: visible;
-  z-index: 5;
-}
-
-.modal-carrito {
-  position: relative;
-  background-color: white;
-  min-width: 100%;
-  padding: 20px;
-  margin-top: -100%;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-}
-
-@media (min-width: 768px) {
-  .modal-carrito {
-    position: relative;
-    background-color: white;
-    min-width: 50%;
-    padding: 20px;
-    margin-top: -100%;
-    -webkit-transition: all .5s;
-    transition: all .5s;
-  }
-}
-
-@media (max-width: 768px) {
-  .modal-active {
-    opacity: 1;
-    visibility: visible;
-    z-index: 5;
-    margin-top: 10vh;
-    max-height: 90vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    overflow-x: scroll;
-  }
-}
-
-.modal-active .modal-carrito {
-  margin-top: 0;
-}
-
-.modal-carrito h3, .modal-carrito .h3 {
-  color: #316ebe;
-  padding-bottom: 5px;
-}
-
-.modal-carrito #carritoCerrar {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  font-size: 20px;
-  color: #316ebe;
-  border: none;
-  background-color: white;
-}
-
-.modal-carrito #carritoCerrar:hover {
-  cursor: pointer;
-}
-
-.modal-carrito #carritoCerrar:focus {
-  outline: none;
-}
-
-.modal-carrito .precioProducto {
-  padding-top: 10px;
-}
-
-.card .card-image .card-title {
-  color: black;
-  position: unset;
-  cursor: pointer;
-}
-
-.productoEnCarrito {
-  border-left: 5px solid lightblue;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
-  margin: 5px 0;
-  padding: 5px 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.productoEnCarrito:hover {
-  border-left: 5px solid #316ebe;
-}
-
-.boton-eliminar {
-  background-color: white;
-  color: #316ebe;
-  border: none;
-  font-size: 20px;
-}
-
-.boton-eliminar:hover {
-  cursor: pointer;
-}
-
-.boton-eliminar:focus {
-  outline: none;
-}
-
 .btn-xl {
   text-transform: uppercase;
   padding: 1.5rem 3rem;
@@ -12246,6 +12063,47 @@ select {
 .btn-gradient:hover {
   -webkit-transform: scale(1.02, 1.02);
           transform: scale(1.02, 1.02);
+}
+
+.delete-btn {
+  background-color: white;
+  color: #316ebe;
+  border: none;
+  font-size: 15px;
+}
+
+.delete-btn:hover {
+  cursor: pointer;
+}
+
+.delete-btn:focus {
+  outline: none;
+}
+
+.cart-btns {
+  color: white;
+  background-color: #316ebe;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+#cart-button {
+  border: none;
+  color: #316ebe;
+  font-size: 40px;
+  border-radius: 50%;
+  padding: 10px 20px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+#cart-button:hover {
+  cursor: pointer;
+  color: white;
+}
+
+#cart-button:focus {
+  outline: none;
 }
 
 .navbar-custom {
@@ -12743,5 +12601,150 @@ p {
   -webkit-transition: all 1.7s;
   transition: all 1.7s;
   z-index: 1405;
+}
+
+#stock-container {
+  max-width: 1200px;
+  margin: 60px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+p {
+  line-height: 1.8;
+}
+
+.product {
+  max-width: 30%;
+  padding: 10px;
+  margin-bottom: 20px;
+  -webkit-box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-active {
+  opacity: 1;
+  visibility: visible;
+  z-index: 5;
+}
+
+.modal-cart {
+  position: relative;
+  background-color: white;
+  min-width: 100%;
+  padding: 20px;
+  margin-top: -100%;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+@media (min-width: 768px) {
+  .modal-cart {
+    position: relative;
+    background-color: white;
+    min-width: 50%;
+    padding: 20px;
+    margin-top: -100%;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
+}
+
+@media (max-width: 768px) {
+  .modal-active {
+    opacity: 1;
+    visibility: visible;
+    z-index: 5;
+    margin-top: 10vh;
+    max-height: 90vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    overflow-x: scroll;
+  }
+}
+
+.modal-active .modal-cart {
+  margin-top: 0;
+}
+
+.modal-cart h3, .modal-cart .h3 {
+  color: #316ebe;
+  padding-bottom: 5px;
+}
+
+.modal-cart #cartClose {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  color: #316ebe;
+  border: none;
+  background-color: white;
+}
+
+.modal-cart #cartClose:hover {
+  cursor: pointer;
+}
+
+.modal-cart #cartClose:focus {
+  outline: none;
+}
+
+.modal-cart .productPrice {
+  padding-top: 10px;
+}
+
+.card .card-image .card-title {
+  color: black;
+  position: unset;
+  cursor: pointer;
+}
+
+.productOnCart {
+  border-left: 5px solid lightblue;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  margin: 5px 0;
+  padding: 5px 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.productOnCart:hover {
+  border-left: 5px solid #316ebe;
 }
 /*# sourceMappingURL=styles.css.map */
