--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,6 @@
 @import "./_variables.scss";
 
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "\../node_modules/bootstrap/scss/bootstrap.scss";
 
 @import "./_global.scss";
 
@@ -10,3 +10,4 @@
 
 @import "./sections/_masthead.scss";
 @import "./sections/_loader.scss";
+@import "./sections/_cart.scss";
