--- a/css/sections/_cart.scss
+++ b/css/sections/_cart.scss
@@ -115,3 +115,69 @@ p {
 .productOnCart:hover {
     border-left: 5px solid rgb(49, 110, 190);
 }
+
+.modal-container2 {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-cart2 {
+    position: relative;
+    background-color: white;
+    min-width: 100%;
+    padding: 20px;
+    margin-top: -100%;
+    transition: all 0.5s;
+}
+
+.modal-active2 {
+    opacity: 1;
+    visibility: visible;
+    z-index: 7;
+    padding-top: 10vh;
+    max-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: overlay !important;
+}
+
+// PC
+@media (min-width: 768px) {
+    .modal-cart2 {
+        min-width: 50%;
+    }
+}
+
+.modal-active2 .modal-cart2 {
+    margin-top: 0;
+}
+
+.modal-cart2 h3 {
+    color: rgb(49, 110, 190);
+    padding-bottom: 5px;
+}
+
+.modal-cart2 #closeCart2 {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 20px;
+    color: rgb(49, 110, 190);
+    border: none;
+    background-color: white;
+}
+.modal-cart2 #closeCart2:hover {
+    cursor: pointer;
+}
+.modal-cart2 #closeCart2:focus {
+    outline: none;
+}
