--- a/css/styles.css
+++ b/css/styles.css
@@ -12085,6 +12085,7 @@ html {
   background-color: #316ebe;
   margin-top: 5%;
   margin-bottom: 5%;
+  display: none;
 }
 
 #cart-button {
@@ -12746,5 +12747,83 @@ p {
 
 .productOnCart:hover {
   border-left: 5px solid #316ebe;
+}
+
+.modal-container2 {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-cart2 {
+  position: relative;
+  background-color: white;
+  min-width: 100%;
+  padding: 20px;
+  margin-top: -100%;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.modal-active2 {
+  opacity: 1;
+  visibility: visible;
+  z-index: 7;
+  padding-top: 10vh;
+  max-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow-y: overlay !important;
+}
+
+@media (min-width: 768px) {
+  .modal-cart2 {
+    min-width: 50%;
+  }
+}
+
+.modal-active2 .modal-cart2 {
+  margin-top: 0;
+}
+
+.modal-cart2 h3, .modal-cart2 .h3 {
+  color: #316ebe;
+  padding-bottom: 5px;
+}
+
+.modal-cart2 #closeCart2 {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  color: #316ebe;
+  border: none;
+  background-color: white;
+}
+
+.modal-cart2 #closeCart2:hover {
+  cursor: pointer;
+}
+
+.modal-cart2 #closeCart2:focus {
+  outline: none;
 }
 /*# sourceMappingURL=styles.css.map */
